# synapse-voice

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
dist-build/: BUILD-WINDOWS.md  build-appimage.sh  build-linux.sh  entrypoint.py  installer.nsi  synapse-voice.spec  version-info.txt
docs/: codex-audit-v0.5.6-2026-05-13.md  v0.10.0-UI-REDESIGN-PLAN.md
marketing/: README.md  index.html
marketing/css/: style.css
marketing/js/: globe.js  main.js
scripts/: run-dev.sh  setup-venv.sh
server/: Dockerfile  README.md  accounts.py  cleanup.py  diarize_endpoint.py  docker-compose.yml  email_send.py  jwt_verify.py  main.py  meet_endpoints.py
synapse_voice/: account.py  auto_mode.py  autostart.py  bridge_client.py  cleanup_client.py  config.py  dach_format.py  diarization_client.py  hardware.py  hotkey.py  i18n.py  languages.py  logger.py  main.py  meet_client.py  meet_host_stream.py  meetings.py  recorder.py  sounds.py  subunit_auth.py  target_lock.py  theme.py  updater.py
synapse_voice/transcriber/: __init__.py  base.py  cloud.py  local.py  onnx_local.py  openrouter.py  subunit.py
synapse_voice/ui/: bubble.py  history.py  hotkey_capture.py  hub.py  hub_header.py  hub_sidebar.py  lang_picker.py  main_window.py  meeting_host.py  meetings.py  mic_meter.py  onboarding.py  orb_overlay.py  plan_badge.py  settings.py  tray.py  widgets.py
synapse_voice/ui/sections/: __init__.py  embed.py  history.py  home.py  meetings.py  placeholder.py  settings.py  vocabulary.py
tests/: screenshots.py  smoke_test.py
